Final tweaks to a few tag examples

--- a/LearnspreeHTML/AboutViewController.xib
+++ b/LearnspreeHTML/AboutViewController.xib
@@ -125,10 +125,10 @@
 					<object class="IBUITextView" id="476088006">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">293</int>
-						<string key="NSFrame">{{20, 209}, {280, 43}}</string>
+						<string key="NSFrame">{{20, 208}, {280, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="127269709"/>
+						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MSAxIDEgMAA</bytes>
@@ -238,11 +238,11 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="476088006"/>
 							<reference ref="978036771"/>
 							<reference ref="860403475"/>
 							<reference ref="127269709"/>
 							<reference ref="1028852392"/>
+							<reference ref="476088006"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -301,7 +301,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">12</int>
+			<int key="maxID">13</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
